<?xml version="1.0"?>
<package>
  <name>iai_donbot_bringup</name>
  <version>0.0.0</version>
  <description>The iai_donbot_bringup package</description>

  <maintainer email="stelter@todo.todo">stelter</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>omni_teleop</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>omni_ethercat</run_depend>
  <run_depend>soft_runstop</run_depend>
  <run_depend>iai_boxy_base_2</run_depend>
  <run_depend>ur_modern_driver</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>nav_pcontroller</run_depend>
  <run_depend>iai_refills_lab</run_depend>
  <run_depend>spinnaker_sdk_camera_driver</run_depend>
  <run_depend>realsense2_camera</run_depend>

</package>
